2009-05-19 yusei
* Fix some proxy fields. count_method should not be inherited from template field and proxy_listbox_ids had to be copied to new proxified fields but it was not copied.

2009-05-01 yusei
* Fix some mistakes on previous field library conversion.

2009-04-30 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility. Need recent version of erp5_core(newer than r1193).
* Update dependencies.

2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-15 Kazuhiko
* move open order functionality to erp5_open_order BT.

2009-03-13 yusei
* Correct workflow titles.

2009-02-15 yusei
* Fixed wrong field name in OpenSaleOrder_view.

2009-02-09 yusei
* Added open order functionality.

2009-01-29 yusei
* Use activate_kw parameter in build method.

2008-12-9 yusei
* Display all selected business applications in listbox.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-10-02 Jerome
* Add delivery_tax_interaction workflow to update tax line when delivery line is deleted.

2008-09-16 Kazuhiko
* revise purchase_packing_list_builder and sale_packing_list_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Internal Packing List, Purchase Packing List and Sale Packing List.

2008-09-11 Kazuhiko
* Add a script for selecting deliveries in purchase_packing_list_builder like in sale_packing_list_builder.

2008-09-10 yusei
* Update worklist action box names.

2008-09-08 yusei
* Enable template feature for Sales Order.

2008-09-04 yusei
* Update English messages.

2008-08-29 yusei
* Correct text.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-07-30 Jerome
Add "offered" and "rejected" state on order workflow, to manage offers.

2008-07-16 Jerome
Add worklists for diverged packing lists.

2008-07-09 Nicolas
use standard packing_list_workflow for Internal Packing Lists
